[package]
name = "rsa"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
flate2 = "1.1.9"
reqwest = { version = "0.12", features = ["stream"] }
serde = "1.0.228"
serde_json = "1.0.149"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
